# docs/swagger.json
@@ -86,6 +86,96 @@
           }
         },
         "tags": ["Credit Cards"]
+      },
+      "put": {
+        "summary": "Update a credit card by ID",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "card_id",
+            "required": true,
+            "type": "integer"
+          },
+          {
+            "in": "body",
+            "name": "credit_card_data",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "number": {
+                  "type": "string"
+                },
+                "exp_date": {
+                  "type": "string",
+                  "description": "The expiration date of the credit card (e.g., '12/25')."
+                },
+                "cvv": {
+                  "type": "string",
+                  "description": "The CVV code is an optional number."
+                },
+                "holder": {
+                  "type": "string",
+                  "description": "The holder is a card name."
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Credit card updated successfully"
+          },
+          "400": {
+            "description": "Invalid request data"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Credit card not found"
+          },
+          "500": {
+            "description": "Failed to update credit card"
+          }
+        },
+        "tags": ["Credit Cards"],
+        "security": [
+          {
+            "Bearer Auth": []
+          }
+        ]
+      },
+      "delete": {
+        "summary": "Delete a credit card by ID",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "card_id",
+            "required": true,
+            "type": "integer"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Credit card deleted successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Credit card not found"
+          },
+          "500": {
+            "description": "Failed to delete credit card"
+          }
+        },
+        "tags": ["Credit Cards"],
+        "security": [
+          {
+            "Bearer Auth": []
+          }
+        ]
       }
     },
     "/api/v1/register": {
